Install pug-cli

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "deploy": "git subtree push --prefix dist/ origin gh-pages",
     "redeploy": "yarn buildGHPages && yarn deploy"
   },
-  "description": "Display the temperature by month from 1753 to 2015 in a heat map."
+  "description": "Display the temperature by month from 1753 to 2015 in a heat map.",
+  "devDependencies": {
+    "pug-cli": "^1.0.0-alpha6"
+  }
 }
