--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "description": "Display the temperature by month from 1753 to 2015 in a heat map.",
   "devDependencies": {
-    "pug-cli": "^1.0.0-alpha6"
+    "pug-cli": "^1.0.0-alpha6",
+    "sass": "^1.0.0-beta.5.2"
   }
 }
